add win indicator

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div id="threeColumn">
 
             <div id="first" class="column">
-                <div id="long" class="disk" long="3"></div>
-                <div id="mid" class="disk" long="2"></div>
-                <div id="short" class="disk" long="1"></div>
+                <div id="long" class="disk"></div>
+                <div id="mid" class="disk"></div>
+                <div id="short" class="disk"></div>
             </div>
 
             <div id="second" class="column"></div>
